Geänderte Dateien hochgeladen
Alle Feldlinien werden gezeichnet (ohne Berücksichtigung der Feldstärke); Umstellung von ArrayList<ArrayList<Point>> fieldLine auf Set<(Linked)List<Point>